syntax = "proto3";

package monitorApiv1;
option go_package = "./monitorApiv1";

service SignUpHandler {
  rpc SignUp (SignUpRequest) returns (stream SignUpResponse);
}

message SignUpRequest {
  int32 ReportPeriod = 2;
  int32 MeanPeriod = 3;
}

message SignUpResponse {
  State State = 1;
}

message State {
  LoadAverage LoadAverage = 1;
  CPULoad CPULoad = 2;
  Mem Mem = 3;
}

message LoadAverage {
  double One = 1;
  double Five = 2;
  double Fifteen = 3;
}

message CPULoad {
  double User = 1;
  double System = 2;
  double Idle = 3;
}

message Mem {
  double Total = 1;
  double Free = 2;
  double Used = 3;
}